--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Visitor Check-In v5</title>
+<title>Visitor Log v6</title>
 <style>
-  body { margin: 0; font-family: Arial, sans-serif; background-color: #0A2E5D; color: white; display: flex; flex-direction: column; height: 100vh; }
-  .centered { display: flex; flex-direction: column; justify-content: center; align-items: center; flex: 1; }
-  .button { padding: 15px 30px; margin: 10px; font-size: 18px; cursor: pointer; border: none; border-radius: 8px; }
-  .button-primary { background-color: #1E70BF; color: white; }
-  .button-secondary { background-color: #3E8ED0; color: white; }
-  .button-danger { background-color: #D9534F; color: white; }
-  input { padding: 10px; font-size: 16px; border-radius: 5px; border: none; margin: 5px 0; }
-  .tab-bar { display: flex; justify-content: space-around; background: #0D3B70; padding: 10px 0; }
-  .tab-bar button { flex: 1; }
-  .card { background: #154680; padding: 15px; margin: 10px; border-radius: 10px; }
-  #cameraContainer { position: relative; width: 100%; max-width: 400px; height: 300px; margin: 20px auto; }
-  #cameraContainer video { width: 100%; height: 100%; border-radius: 10px; object-fit: cover; }
-  #cancelCamera { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); padding: 10px 20px; background: #D9534F; color: white; border: none; border-radius: 8px; cursor: pointer; z-index: 10; }
+  body { margin:0; font-family:Arial,sans-serif; background:#0A2E5D; color:white; display:flex; flex-direction:column; height:100vh; }
+  .centered { display:flex; flex-direction:column; justify-content:center; align-items:center; flex:1; }
+  .button { padding:15px 30px; margin:10px; font-size:18px; cursor:pointer; border:none; border-radius:8px; }
+  .button-primary { background:#1E70BF; color:white; }
+  .button-secondary { background:#3E8ED0; color:white; }
+  .button-danger { background:#D9534F; color:white; }
+  input { padding:10px; font-size:16px; border-radius:5px; border:none; margin:5px 0; width:200px; }
+  .tab-bar { display:flex; justify-content:space-around; background:#0D3B70; padding:10px 0; }
+  .tab-bar button { flex:1; }
+  .card { background:#154680; padding:15px; margin:10px; border-radius:10px; display:flex; justify-content:space-between; align-items:center; }
+  #cameraContainer { position:relative; width:90%; max-width:400px; height:300px; margin:20px auto; display:none; }
+  #cameraContainer video { width:100%; height:100%; border-radius:10px; object-fit:cover; }
+  #cancelCamera { position:absolute; bottom:10px; left:50%; transform:translateX(-50%); padding:10px 20px; background:#D9534F; color:white; border:none; border-radius:8px; cursor:pointer; z-index:10; }
 </style>
 </head>
 <body>
-<div id="versionBanner" style="text-align:center;background:#154680;padding:5px;">APP VERSION: v5</div>
+<div id="versionBanner" style="text-align:center;background:#154680;padding:5px;">APP VERSION: v6</div>
 
 <div id="passcodeScreen" class="centered">
   <h2>Enter Passcode</h2>
@@ -45,7 +45,7 @@
   <div id="scanTab" class="centered">
     <button class="button button-primary" id="scanBtn">📷 Scan</button>
     <button class="button button-secondary" id="manualBtn">✏️ Manual Entry</button>
-    <div id="cameraContainer" style="display:none;">
+    <div id="cameraContainer">
       <video id="cameraVideo" autoplay></video>
       <button id="cancelCamera">Cancel</button>
     </div>
@@ -59,8 +59,7 @@
 </div>
 
 <script>
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxtXiu1A9JKFx8KEpngA0Dnp1_MfrIDH0jpkrILHTt6CD73w8mKP7g36oi4wS4J1eK8/exec";
-  
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxG1ut1sfuacBnfWMImFAUEz-BK29IEf7yB_K0cnD2c9JZHOyG81Dal5VpMYkG1BHSRwg/exec";
 const PASSCODE = "test";
 
 let currentSite = "";
@@ -112,19 +111,20 @@ document.getElementById("scanBtn").onclick = async () => {
     container.style.display = "none";
   };
 
-  // QR scanning logic here (you already have working code)
-  // After scanning, send POST to script like:
-  // sendCheckin(driverName, truckInfo);
+  // TODO: Add QR scanning library here to get driver/truck
+  // For now, demo test values
+  // sendCheckin("DemoDriver","DemoTruck");
 };
 
 document.getElementById("manualBtn").onclick = () => {
   const driver = prompt("Enter Driver Name:");
   if(!driver) return;
-  const truck = prompt("Enter Truck Info (optional):","") || "";
-  sendCheckin(driver, truck);
+  const truck = prompt("Enter Truck Info (optional)","") || "";
+  const timeIn = prompt("Enter Time In (editable, leave blank for now):", new Date().toLocaleString()) || new Date().toLocaleString();
+  sendCheckin(driver, truck, timeIn);
 };
 
-function sendCheckin(driver, truck){
+function sendCheckin(driver, truck, timeIn){
   fetch(SCRIPT_URL, {
     method:"POST",
     body: JSON.stringify({ site: currentSite, action: "checkin", driver, truck }),
@@ -153,7 +153,7 @@ function refreshOnSiteList(){
         .forEach(item=>{
       const card = document.createElement("div");
       card.className = "card";
-      card.innerHTML = `<strong>${item.name}</strong><br>${item.truck}<br>${new Date(item.timeIn).toLocaleString()}<br>`;
+      card.innerHTML = `<div><strong>${item.name}</strong><br>${item.truck}<br>${new Date(item.timeIn).toLocaleString()}</div>`;
       const btn = document.createElement("button");
       btn.className = "button button-danger";
       btn.innerText = "Sign Out";
